--- a/app/sass/_mixins.scss
+++ b/app/sass/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin svelte-underline($shade, $thickness) {
+@mixin svelte-underline($shade, $thickness, $hover) {
   // props to Marcin Wichary @ Medium.com for sharing this approach to link underlining
   // https://medium.com/designing-medium/crafting-link-underlines-on-medium-7c03a9274f9
   background-size: 2px 2px;
@@ -9,16 +9,20 @@
     @include linear-gradient(to bottom, rgba(255,255,255, 0) 50%, rgba(255,255,255, 0.6) 50%);
     color: #fff;
 
-    &:hover{
-      @include linear-gradient(to bottom, rgba(255,255,255, 0) 50%, rgba(255,255,255, 0.9) 50%);
+    @if $hover != no-hover{
+      &:hover{
+        @include linear-gradient(to bottom, rgba(255,255,255, 0) 50%, rgba(255,255,255, 0.9) 50%);
+      }
     }
   }
   @else if $shade == dark{
     @include linear-gradient(to bottom, rgba(0,0,0, 0) 50%, rgba($body-copy-color, 0.3) 50%);
     color: $body-copy-color;
 
-    &:hover{
-      @include linear-gradient(to bottom, rgba(0,0,0, 0) 50%, rgba($body-copy-color, 0.6) 50%);
+    @if $hover != no-hover{
+      &:hover{
+        @include linear-gradient(to bottom, rgba(0,0,0, 0) 50%, rgba($body-copy-color, 0.6) 50%);
+      }
     }
   }
   @if $thickness == heavy{
