--- a/app/sass/_navigation.scss
+++ b/app/sass/_navigation.scss
@@ -151,10 +151,10 @@
       color: #fff;
     }
     &.active span{
-      @include svelte-underline(dark, heavy);
+      @include svelte-underline(dark, heavy, no-hover);
 
       .home &{
-        @include svelte-underline(light, heavy);
+        @include svelte-underline(light, heavy, no-hover);
       }
     }
   }
