--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -155,11 +155,13 @@ a {
   text-decoration: none;
   -webkit-tap-highlight-color: transparent; }
 
-#nprogress .bar {
-  background: #f16322;
-  height: .2rem; }
-#nprogress .peg, #nprogress .spinner {
-  display: none; }
+#nprogress {
+  z-index: 1; }
+  #nprogress .bar {
+    background: #f16322;
+    height: .2rem; }
+  #nprogress .peg, #nprogress .spinner {
+    display: none; }
 
 .browsehappy {
   margin: 0.2em 0;
@@ -221,7 +223,8 @@ a {
 #page-window {
   position: relative;
   float: left;
-  width: 100%; }
+  width: 100%;
+  z-index: 0; }
   #page-window:after {
     content: "";
     display: table;
@@ -605,10 +608,6 @@ h4 {
       background-size: 1px 6px;
       background-position: 0 2.9rem;
       background-repeat: repeat-x; }
-      .nav-primary__menu--lg a.active span:hover {
-        background-color: transparent;
-        background-image: -webkit-linear-gradient(top, transparent 50%, rgba(65, 65, 65, 0.6) 50%);
-        background-image: linear-gradient(to bottom,transparent 50%, rgba(65, 65, 65, 0.6) 50%); }
       .home .nav-primary__menu--lg a.active span {
         background-size: 2px 2px;
         background-position: 0 1.6rem;
@@ -620,10 +619,6 @@ h4 {
         background-size: 1px 6px;
         background-position: 0 2.9rem;
         background-repeat: repeat-x; }
-        .home .nav-primary__menu--lg a.active span:hover {
-          background-color: rgba(255, 255, 255, 0);
-          background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.9) 50%);
-          background-image: linear-gradient(to bottom,rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.9) 50%); }
   .nav-primary__menu--lg span {
     padding: 0.7rem 0; }
 
